# tp1_ml_mnist

./: README.md  res_tpu_colab_1.txt  tp1_ml_alexandre_caldeira 30epochs.ipynb  tp1_ml_alexandre_caldeira.ipynb  tp1_ml_alexandre_caldeira_colab.ipynb
mlruns/0/: meta.yaml
simpler_refactored/: dunno.txt  (+1 more)
tp1ml_mnist_proj/: Trabalho.md  pyproject.toml
tp1ml_mnist_proj/mlruns/0/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/: automated_gridsearch.ipynb  dataviz.ipynb  mlflow_optuna_test.ipynb  pytorch_test.ipynb
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/0/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/0/4eae6d93bed141ad911830a01e9cc499/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/00900ef298784dcba94ef2c19c35da04/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/10c2b3209eeb43aab6c074cf6fda4d3f/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/18e0a2c48afc45e481145e0398068592/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/261d1af2211f47ffb4699412a2550fc9/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/2951a6a7b1f04a8a9979f952f329860e/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/2ba03252445141ba8e70773e71efa0ab/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/2c71a4c295d34a719a0c89e47daa2c44/: meta.yaml
tp1ml_mnist_proj/tp1ml_mnist_proj/mlruns/680587798462940491/4162f0434240467082eaa11b85368f74/: meta.yaml
(+31984 files in other folders)
