[tool.poetry]
name = "tp1ml-mnist-proj"
version = "0.1.0"
description = ""
authors = ["Alexandre-Caldeira <alexandre.caldeira@ufv.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
torch = "^2.3.0"
optuna = "^3.6.1"
mlflow = "^2.13.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
